# l1-fuzzing-workshop

./: .gitignore  Cargo.toml  README.md
radix-engine/: Cargo.toml
radix-engine-fuzzer/: .gitignore  Cargo.toml  build.sh  coverage.sh  generate_seed_corpus.sh  perf_report.sh  run.sh  run_afl.sh
radix-engine-fuzzer/fuzz_targets/: fuzzer.rs
radix-engine/src/system/kernel_modules/auth/: authentication.rs
radix-engine/src/transaction/: transaction_executor.rs
radix-engine/src/wasm/: prepare.rs
scrypto-unit/src/: test_runner.rs
