[package]
name = "radix-engine-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
sbor = { path = "../sbor", default-features = false }
radix-engine = { path = "../radix-engine", default-features = false }
radix-engine-constants = { path = "../radix-engine-constants" }
radix-engine-interface = { path = "../radix-engine-interface", default-features = false }
radix-engine-common = { path = "../radix-engine-common", default-features = false }
radix-engine-stores = { path = "../radix-engine-stores", default-features = false }
transaction = { path = "../transaction", default-features = false }
utils = { path = "../utils", default-features = false }
radix-engine-utils = { path = "../radix-engine-utils", optional = true, features = ["resource_tracker"]}
resources-tracker-macro = { path = "../radix-engine-utils/resources-tracker-macro" }
scrypto = { path = "../scrypto", default-features = false }
sbor-derive = { path = "../sbor-derive", default-features = false }
scrypto-unit = { path = "../scrypto-unit", default-features = false }

[features]
default = ["std"]
std = ["sbor/std", "transaction/std", "radix-engine/std", "radix-engine-interface/std", "radix-engine-stores/std", "utils/std", "scrypto/std", "scrypto-unit/std"]

[[bin]]
name = "fuzzer"
path = "fuzz_targets/fuzzer.rs"
test = false
doc = false
bench = false
