[package]
name = "radix-engine-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = { version = "0.4", optional = true }
afl = { version ="0.15.10", optional = true }
sbor = { path = "../sbor", default-features = false }
radix-engine = { path = "../radix-engine", default-features = false }
radix-engine-constants = { path = "../radix-engine-constants" }
radix-engine-interface = { path = "../radix-engine-interface", default-features = false }
radix-engine-common = { path = "../radix-engine-common", default-features = false }
radix-engine-stores = { path = "../radix-engine-stores", default-features = false }
transaction = { path = "../transaction", default-features = false }
utils = { path = "../utils", default-features = false }
radix-engine-utils = { path = "../radix-engine-utils", optional = true, features = ["resource_tracker"]}
resources-tracker-macro = { path = "../radix-engine-utils/resources-tracker-macro" }
scrypto = { path = "../scrypto", default-features = false }
sbor-derive = { path = "../sbor-derive", default-features = false }
scrypto-unit = { path = "../scrypto-unit", default-features = false }
once_cell = "1.10.0"

[features]
default = ["std"]
std = ["sbor/std", "transaction/std", "radix-engine/std", "radix-engine-interface/std", "radix-engine-stores/std", "utils/std", "scrypto/std", "scrypto-unit/std"]
coverage = ["libfuzzer"]
libfuzzer = ["dep:libfuzzer-sys"]
afl = ["dep:afl"]
fuzzing = ["radix-engine/fuzzing"]

[[bin]]
name = "fuzzer"
path = "fuzz_targets/fuzzer.rs"
test = false
doc = false
bench = false
